--- a/creations.html
+++ b/creations.html
@@ -159,7 +159,7 @@
             <div class="blockMockup">
                 <h2 class="large">08</h2>
                 <h2>Réalisation d’un magazine</h2>
-                <p>Réalisation d’un magazine à l’aide des gabarits et mock-up réalisé sous <strong>Photoshop</strong> !</p>
+                <p>Réalisation d’un magazine à l’aide des gabarits InDesign et mock-up réalisé sous <strong>Photoshop</strong> !</p>
                 <a href="projet-magazine.html" class="button project">Voir le projet</a>
             </div>
         </section>
@@ -178,15 +178,27 @@
         <div class="separateur"></div>
         <section class="container">
             <div class="blockMockup">
-                <img class="mockup" src="assets/img/mockup.jpg" alt="Mock Up">
+                <a href="projet-festival.html"><img class="mockup" src="assets/img/festival/festoche.jpg" alt="Mock Up"></a>
             </div>
             <div class="blockMockup">
                 <h2 class="large">10</h2>
+                <h2>Organisation et Branding complet d'un Festival (fictif)</h2>
+                <p>Dans le cadre d’une mise en situation professionnelle, nous devions élaborer un plan Marketing, réaliser un logo, une carte de visite, des pictogrammes, et des motifs à l’aide d’Illustrator sur le thème de notre projet fil rouge.</p>
+                <a href="projet-festival.html" class="button project">Voir le projet</a>
+            </div>
+        </section>
+        <section class="container">
+            <div class="blockMockup">
+                <h2 class="large">11</h2>
                 <h2>Projet à Venir...</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum rerum tenetur deserunt quos dignissimos natus fugiat? Odit, eaque. Nesciunt aut repudiandae sapiente eligendi pariatur fugiat possimus itaque corrupti asperiores earum?</p>
                 <a href="#" class="button project">Voir le projet</a>
             </div>
+            <div class="blockMockup">
+                <img class="mockup" src="assets/img/mockup.jpg" alt="Mock Up">
+            </div>
         </section>
+
        
         <!--Section Contact-->
         <section class="contact">
