--- a/projet-festival.html
+++ b/projet-festival.html
@@ -60,24 +60,25 @@
             <a href="#"><i class="fas fa-angle-double-up"></i></a>
         </div>
         <section class="yellowBg">
-            <h2 class="title">Réalisation d’un magazine</h2>
-            <p>INDESIGN / PHOTOSHOP</p>
-            <p>Réalisation d’un magazine à l’aide des gabarits InDesign et mock-up réalisé sous Photoshop !</p>
+            <h2 class="title">Organisation et Branding complet d'un Festival (fictif)</h2>
+            <p>INDESIGN / PHOTOSHOP / ILLUSTRATOR</p>
+            <p>Élaboration d'un plan Marketing, réalisation d'un logo, une carte de visite, des pictogrammes, et des motifs à l’aide d’Illustrator sur le thème de mon projet fil rouge : un festival Punk Rock fictif sur Le Havre.</p>
         </section>
 
         <section class="chadou">
-            <img src="assets/img/magazine/magazine-mockup-web.jpg" alt="Mock up Magazine">
+            <img src="assets/img/festival/festoche.jpg" alt="Mock up Festival">
             <h3>Projet réalisé en solo.</h3>
         </section>
 
         <section class="container">
             <div class="blockMockup">
-                <h2>Travail sur InDesign</h2>
-                <p>Le but de cet exercice était de se familiariser et prendre en main le logiciel InDesign</p>
-                <p>Nous devions réaliser un magazine à l'aide des gabarits, nous avions carte blanche.</p>
+                <h2>Campagne Marketing</h2>
+                <p>Présentation de l’évènement, méthode SWOT, Objectifs SMART, KPI, Persona...</p>
+                <p>Stratégie sociale media du Festival : Rappel des objectifs (SMART), les réseaux sociaux sélectionnés pour atteindre les objectifs fixés, la ligne éditoriale de chaque réseau social sélectionné (objectif, cible, ton et thématique, planning) >>> 5 thèmes par réseau, j’ai préparé 3 posts par thème pour chacun des réseaux.</p> 
+                <p>Choix des influenceurs susceptibles de promouvoir cette campagne.</p>
             </div>
             <div class="blockImg">
-                <img class="indesign" src="assets/img/magazine/indesign.png" alt="Logo InDesign">
+                <img class="indesign" src="assets/img/festival/marketing.jpg" alt="Image Marketing">
             </div>
         </section>
 
@@ -87,40 +88,53 @@
         <section class="container">
             <div class="blockMockup">
                 <h2 class="large">01</h2>
-                <h2>Couverture du Magazine</h2>
-            </div>
-            <div class="blockMockup">
-                    <img class="mockup" src="assets/img/magazine/couv.jpg" alt="Couverture du Magazine">
+                <h2>Campagne Marketing</h2>
+                <p> Je me suis largement inspirée d’un vrai festival qui a lieu en Belgique tous les ans !</p> 
+                <p>J'ai donc retouché l'affiche existante qui a été réalisée par "Zu ! ©"</p>
             </div>
         </section>
+
+        <!-- Carousel -->
+        <div class="slider">
+            <div class="slides">
+                <div class="slide"><img class="fest" src="assets/img/festival/marketing/festival.jpg" alt ="planches Adobe XD"></div>
+                <div class="slide"><img class="fest" src="assets/img/festival/marketing/festival2.jpg" alt ="planches Adobe XD"></div>
+                <div class="slide"><img class="fest" src="assets/img/festival/marketing/festival3.jpg" alt ="planches Adobe XD"></div>
+                <div class="slide"><img class="fest" src="assets/img/festival/marketing/festival4.jpg" alt ="planches Adobe XD"></div>
+                <div class="slide"><img class="fest" src="assets/img/festival/marketing/festival5.jpg" alt ="planches Adobe XD"></div>
+                <div class="slide"><img class="fest" src="assets/img/festival/marketing/festival6.jpg" alt ="planches Adobe XD"></div>
+            </div>
+        </div>
 
         <div class="separateur"></div>
 
         <section class="container">
             <div class="blockMockup">
                 <h2 class="large">02</h2>
-                <h2>Intérieur du Magazine</h2>
-                <p>Exemple d'articles que l'on peut retrouver à l'intérieur du magazine.</p>
-            </div>
-            <div class="blockMockup">
-                    <img class="mockup" src="assets/img/magazine/interieurMag1.jpg" alt="Intérieur du magazine">
+                <h2>Travail sur la suite Adobe CC</h2>
+                <p>Ensuite, j’ai réalisé différents mock-up, mises en situation et goodies pour promouvoir et rendre le Festival réel grâce à Illustrator, InDesign et Photoshop !</p>
             </div>
         </section>
-        <div class="blockMockup">
-            <img class="mag" src="assets/img/magazine/interieurMag2.jpg" alt="Intérieur du magazine">
-        </div>
-        <div class="blockMockup">
-            <img class="mag" src="assets/img/magazine/interieurMag3.jpg" alt="Intérieur du magazine">
-        </div>
-        <div class="blockMockup">
-            <img class="mag" src="assets/img/magazine/interieurMag4.jpg" alt="Intérieur du magazine">
+
+        <!-- Carousel 2-->
+        <div class="slider">
+            <div class="slides2">
+                <div class="slide"><img class="fest" src="assets/img/festival/adobeCc/photoshop.jpg" alt ="planches Photoshop"></div>
+                <div class="slide"><img class="fest" src="assets/img/festival/adobeCc/photoshop2.jpg" alt ="planches Photoshop"></div>
+                <div class="slide"><img class="fest" src="assets/img/festival/adobeCc/photoshop3.jpg" alt ="planches Photoshop"></div>
+                <div class="slide"><img class="fest" src="assets/img/festival/adobeCc/photoshop4.jpg" alt ="planches Photoshop"></div>
+                <div class="slide"><img class="fest" src="assets/img/festival/adobeCc/photoshop5.jpg" alt ="planches Photoshop"></div>
+                <div class="slide"><img class="fest" src="assets/img/festival/adobeCc/photoshop6.jpg" alt ="planches Photoshop"></div>
+                <div class="slide"><img class="fest" src="assets/img/festival/adobeCc/photoshop7.jpg" alt ="planches Photoshop"></div>
+                <div class="slide"><img class="fest" src="assets/img/festival/adobeCc/photoshop8.jpg" alt ="planches Photoshop"></div>
+            </div>
         </div>
 
         <div class="separateur"></div>
 
         <div class="buttonBlock">
-            <a href="illustrator.html" class="button below"> <i class="fas fa-caret-left arrow"></i> Projet Précédent </a>
-            <a href="projet-trifold.html" class="button below"> Projet Suivant <i class="fas fa-caret-right arrow"></i> </a>
+            <a href="projet-trifold.html" class="button below"> <i class="fas fa-caret-left arrow"></i> Projet Précédent </a>
+            <a href="creations.html" class="button below"> Retour à Mes Créations <i class="fas fa-caret-right arrow"></i> </a>
         </div>
 
     </main>
