--- a/projet-trifold.html
+++ b/projet-trifold.html
@@ -135,7 +135,7 @@
 
         <div class="buttonBlock">
             <a href="projet-magazine.html" class="button below"> <i class="fas fa-caret-left arrow"></i> Projet Précédent </a>
-            <a href="creations.html" class="button below"> Retour à Mes Créations <i class="fas fa-caret-right arrow"></i> </a>
+            <a href="projet-festival.html" class="button below"> Projet Suivant <i class="fas fa-caret-right arrow"></i> </a>
         </div>
 
     </main>
