révisions portfolio 11jul21

--- a/projet-blog.html
+++ b/projet-blog.html
@@ -123,7 +123,7 @@
             <div class="blockMockup">
                 <h2 class="large">03</h2>
                 <h2>Mise en Ligne</h2>
-                <p>Mise en ligne à l’aide de Github pages.</p>
+                <p>Mise en ligne prochainement, dans l'attente d'un hébergement.</p>
                 <a href="#" target="_blank" class="button project">Voir le résultat</a>
             </div>
         </section>
