--- a/projet-magazine.html
+++ b/projet-magazine.html
@@ -74,7 +74,7 @@
             <div class="blockMockup">
                 <h2>Travail sur InDesign</h2>
                 <p>Le but de cet exercice était de se familiariser et prendre en main le logiciel InDesign</p>
-                <p>Nous devions réaliser un magazine à l'aide des gabarits, nous avions carte blanche.</p>
+                <p>Nous devions réaliser un magazine à l'aide de gabarits imposés, nous avions carte blanche pour le thème du magazine et son contenu.</p>
             </div>
             <div class="blockImg">
                 <img class="indesign" src="assets/img/magazine/indesign.png" alt="Logo InDesign">
@@ -102,10 +102,10 @@
                 <h2>Intérieur du Magazine</h2>
                 <p>Exemple d'articles que l'on peut retrouver à l'intérieur du magazine.</p>
             </div>
-            <div class="blockMockup">
-                    <img class="mockup" src="assets/img/magazine/interieurMag1.jpg" alt="Intérieur du magazine">
-            </div>
         </section>
+        <div class="blockMockup">
+            <img class="mag" src="assets/img/magazine/interieurMag1.jpg" alt="Intérieur du magazine">
+        </div>
         <div class="blockMockup">
             <img class="mag" src="assets/img/magazine/interieurMag2.jpg" alt="Intérieur du magazine">
         </div>
