--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
 
    <!-- Navbar Mobile -->
     <nav class="navbarMobile">
+        <a href="index.html" class="nav-logo"> <img src="assets/img/logo-portfolio.png" alt="logo"></a>
         <div id="menuToggle">
-            <input type="checkbox" />
+            <input type="checkbox"/>
                 <span></span>
                 <span></span>
                 <span></span>
@@ -53,7 +54,6 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
-        <a href="index.html" class="nav-logo"> <img src="assets/img/logo-portfolio.png" alt="logo"></a>
     </nav>
     
     <main>
@@ -136,6 +136,9 @@
                 <a href="https://www.instagram.com/fougdu76/"><i class="fab fa-instagram"></i></a>
             </div>
             <p class="copyright">Copyright © <strong>Élodie Ferry</strong> - 2021</p>
+            
+    <!-- Lien caché -->
+            <a href="https://www.brunchandbowl.com/" id="brunch"></a>
     </footer>
 
     <!--Font Awesome-->
