--- a/creations.html
+++ b/creations.html
@@ -187,15 +187,28 @@
                 <a href="projet-festival.html" class="button project">Voir le projet</a>
             </div>
         </section>
+        <div class="separateur"></div>
         <section class="container">
             <div class="blockMockup">
                 <h2 class="large">11</h2>
+                <h2>Réalisation d'une vidéo</h2>
+                <p>Toujours dans le cadre de notre projet fil rouge, j'ai réalisé une vidéo à l'aide de Premiere Pro & After Effects.</p>
+                <a href="video-festival.html" class="button project">Voir le projet</a>
+            </div>
+            <div class="blockMockup">
+                <a href="video-festival.html"><img class="mockup" src="assets/img/video/video.JPG" alt="Mock Up"></a>
+            </div>
+        </section>
+        <div class="separateur"></div>
+        <section class="container">
+            <div class="blockMockup">
+                <a href="#"><img class="mockup" src="assets/img/mockup.jpg" alt="Mock Up"></a>
+            </div>
+            <div class="blockMockup">
+                <h2 class="large">12</h2>
                 <h2>Projet à Venir...</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum rerum tenetur deserunt quos dignissimos natus fugiat? Odit, eaque. Nesciunt aut repudiandae sapiente eligendi pariatur fugiat possimus itaque corrupti asperiores earum?</p>
                 <a href="#" class="button project">Voir le projet</a>
-            </div>
-            <div class="blockMockup">
-                <img class="mockup" src="assets/img/mockup.jpg" alt="Mock Up">
             </div>
         </section>
 
