--- a/video-festival.html
+++ b/video-festival.html
@@ -74,7 +74,7 @@
             <div class="blockMockup">
                 <h2>Travail sur Premiere Pro & After Effects</h2>
                 <p>Le but de cet exercice était de se familiariser et prendre en main les logiciels de montage Premiere Pro & After Effects.</p>
-                <p>J'ai donc choisi de faire une vidéo de remerciement pour les festivaliers juste après le Festival (fictif).
+                <p>J'ai donc choisi de faire une vidéo de remerciement pour les festivaliers juste après le Festival (fictif).</p>
                 <p>Tout d’abord, j’ai posé mon idée par écrit, j’ai établi un chemin de fer pour découper l’histoire en séquences. J’ai réalisé́ un storyboard sur papier afin d’avoir un visuel détaillant au maximum le rendu final souhaité. J’ai également réalisé un storyboard numérique. Ensuite, je me suis rendue sur les lieux (Le Tétris) pour prendre quelques photos et prises de vue pour les intégrer plus tard dans ma vidéo. J’ai également utilisé des vidéos de concerts que j’avais déjà dans mon téléphone. </p>
                 <p>Enfin, j’ai réalisé́ le montage final à l’aide de Première Pro et After Effects.</p>
             </div>
