--- a/video-festival.html
+++ b/video-festival.html
@@ -119,7 +119,7 @@
                 <h2>Montage Vidéo</h2>
             </div>
             <div class="blockMockup">
-                    <video id="videoSize2" src="assets/video/punkrockinLH.mp4" controls poster="assets/img/video/videofest.png"></video>
+                    <video class="videoSize" src="assets/video/punkrockinLH.mp4" controls poster="assets/img/video/videofest.png"></video>
             </div>
         </section>
 
