--- a/projet-galerie.html
+++ b/projet-galerie.html
@@ -123,7 +123,7 @@
                 <p>Réalisation d'une vidéo à l'aide de Premiere Pro et After Effects pour mettre en ligne sur le site de la galerie.</p>
             </div>
                 <div class="blockMockup">
-                    <video id="videoSize2" src="assets/video/galerieEB.mp4" controls poster="assets/img/galerieEB/img-video.png"></video>
+                    <video class="videoSize" src="assets/video/galerieEB.mp4" controls poster="assets/img/galerieEB/img-video.png"></video>
                 </div>
         </section>
 
