--- a/quisuisje.html
+++ b/quisuisje.html
@@ -123,7 +123,7 @@
         <!--Section Vidéo-->
         <section class="video">
             <h2 class="center">Ils m'ont fait confiance... À votre tour !</h2>
-            <video id="videoSize"src="assets/video/Ils m'ont fait confiance....mp4" controls poster="assets/img/confiance.png"></video>
+            <video class="videoSize"src="assets/video/Ils m'ont fait confiance....mp4" controls poster="assets/img/confiance.png"></video>
         </section>
 
         <!--Section Contact-->
