Modif Google Analytics 22sep

--- a/projet-blog.html
+++ b/projet-blog.html
@@ -9,8 +9,17 @@
     <!--Google Fonts-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Righteous&display=swap" rel="stylesheet">
-     <!-- Favicons -->
-     <link href="assets/img/favicon2.png" rel="icon">
+    <!-- Favicons -->
+    <link href="assets/img/favicon2.png" rel="icon">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CN36QT38XM"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-CN36QT38XM');
+    </script>  
      
     <title>Mon Portfolio</title>
 </head>
