--- a/projet-festival.html
+++ b/projet-festival.html
@@ -11,6 +11,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Righteous&display=swap" rel="stylesheet">
      <!-- Favicons -->
      <link href="assets/img/favicon2.png" rel="icon">
+
+     <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CN36QT38XM"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-CN36QT38XM');
+    </script>  
      
     <title>Mon Portfolio</title>
 </head>
