--- a/projet-pteabreak.html
+++ b/projet-pteabreak.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Portfolio HTML CSS">
+    <meta name="description" content="Elodie Ferry Webdesigner Le Havre - Portfolio HTML CSS">
     <link rel="stylesheet" media="screen" href="assets/css/style.css">
     <!--Google Fonts-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
