--- a/quisuisje.html
+++ b/quisuisje.html
@@ -85,7 +85,7 @@
             </div>
             <div class="aboutBlock2">
                 <img class="me" src="assets/img/elo.jpg" alt="Photo Portait">
-                <a href="assets/img/CV05MAY21.pdf" class="button cv">Voir mon CV</a>
+                <a href="https://elodie2812.github.io/cv/" class="button cv">Voir mon CV</a>
             </div>
         </section>
        
