--- a/creations.html
+++ b/creations.html
@@ -220,15 +220,28 @@
                 <a href="projet-galerie.html" class="button project">Voir le projet</a>
             </div>
         </section>
+        <div class="separateur"></div>
         <section class="container">
             <div class="blockMockup">
                 <h2 class="large">13</h2>
+                <h2>Quelques Illustrations réalisées sous Illustrator</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum rerum tenetur deserunt quos dignissimos natus fugiat? Odit, eaque. Nesciunt aut repudiandae sapiente eligendi pariatur fugiat possimus itaque corrupti asperiores earum?</p>
+                <a href="illustrations.html" class="button project">Voir les illustrations</a>
+            </div>
+            <div class="blockMockup">
+                <a href="illustrations.html"><img class="mockup" src="assets/img/illustrations/octobreRose.png" alt="Mock Up"></a>
+            </div>
+        </section>
+        <div class="separateur"></div>
+        <section class="container">
+            <div class="blockMockup">
+                <a href="#"><img class="mockup" src="assets/img/mockup.jpg" alt="Mock Up"></a>
+            </div>
+            <div class="blockMockup">
+                <h2 class="large">14</h2>
                 <h2>Projet à Venir...</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum rerum tenetur deserunt quos dignissimos natus fugiat? Odit, eaque. Nesciunt aut repudiandae sapiente eligendi pariatur fugiat possimus itaque corrupti asperiores earum?</p>
                 <a href="#" class="button project">Voir le projet</a>
-            </div>
-            <div class="blockMockup">
-                <a href="#"><img class="mockup" src="assets/img/mockup.jpg" alt="Mock Up"></a>
             </div>
         </section>
 
