--- a/creations.html
+++ b/creations.html
@@ -229,7 +229,7 @@
                 <a href="illustrations.html" class="button project">Voir les illustrations</a>
             </div>
             <div class="blockMockup">
-                <a href="illustrations.html"><img class="mockup" src="assets/img/illustrations/octobreRose.png" alt="Mock Up"></a>
+                <a href="illustrations.html"><img class="mockup" src="assets/img/illustrations/octobreRose.jpg" alt="Mock Up"></a>
             </div>
         </section>
         <div class="separateur"></div>
