--- a/illustrations.html
+++ b/illustrations.html
@@ -135,8 +135,8 @@
         <div class="separateur"></div>
 
         <div class="buttonBlock">
-            <a href="projet-trifold.html" class="button below"> <i class="fas fa-caret-left arrow"></i> Projet Précédent </a>
-            <a href="video-festival.html" class="button below"> Projet Suivant <i class="fas fa-caret-right arrow"></i> </a>
+            <a href="projet-galerie.html" class="button below"> <i class="fas fa-caret-left arrow"></i> Projet Précédent </a>
+            <a href="creations.html" class="button below"> Retour à Mes Créations <i class="fas fa-caret-right arrow"></i> </a>
         </div>
 
     </main>
