--- a/projet-galerie.html
+++ b/projet-galerie.html
@@ -152,7 +152,7 @@
 
         <div class="buttonBlock">
             <a href="video-festival.html" class="button below"> <i class="fas fa-caret-left arrow"></i> Projet Précédent </a>
-            <a href="creations.html" class="button below"> Retour à Mes Créations <i class="fas fa-caret-right arrow"></i> </a>
+            <a href="illustrations.html" class="button below"> Projet Suivant <i class="fas fa-caret-right arrow"></i> </a>
         </div>
 
     </main>
