--- a/creations.html
+++ b/creations.html
@@ -26,7 +26,9 @@
 <body>
     <header>
         <h1><a href="index.html"><span class="color">É</span>lodie FERRY</a> 
-            <br> Webdesigner <span class="color">J</span>unior</h1>
+            <br> <strong>Webdesigner</strong> / Intégratrice <span class="color">W</span>eb 
+            <br> <span class="color">L</span>e <span class="color">H</span>avre 
+        </h1>
     </header>
     <!--Navbar Desktop-->
     <nav class="navbar">
@@ -40,6 +42,9 @@
             </li>
             <li class="nav-items">
                 <a href="quisuisje.html" class="nav-links">Qui suis-je ?</a>
+            </li>
+            <li class="nav-items">
+                <a href="references.html" class="nav-links">Références</a>
             </li>
             <li class="nav-items">
                 <a href="contact.html" class="nav-links">Contact</a>
@@ -58,6 +63,7 @@
                 <li><a href="index.html">Accueil</a></li>
                 <li><a href="creations.html">Mes Créations</a></li>
                 <li><a href="quisuisje.html">Qui suis-je ?</a></li>
+                <li><a href="references.html">Références</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
@@ -77,7 +83,7 @@
                 <h2 class="large">01</h2>
                 <h2><strong>Site</strong> vitrine d'une agence de voyages</h2>
                 <p>J’ai eu la chance de mettre en place le site Web <a href="http://www.rond-point-evasion.fr">www.rond-point-evasion.fr</a> en tant qu’autodidacte avant même d’être formée à La Manu. Je l’ai alimenté et mis à jour régulièrement de 2015 à 2021 en conditions réelles.</p>
-                <a href="https://www.rond-point-evasion.fr/" target="_blank" class="button project">Voir le projet</a>
+                <a href="rond-point-evasion.html" target="_blank" class="button project">Voir le projet</a>
             </div>
             <div class="blockMockup">
                     <a href="https://www.rond-point-evasion.fr/" target="_blank"><img class="mockup" src="assets/img/mockupRpe-800.jpg" alt="Mock Up RPE"></a>
@@ -119,7 +125,7 @@
                 <h2>Réalisation d'un jeu avec HTML/CSS & JQuery</h2>
                 <p>Challenge personnel réalisé en solo le temps d’un week-end.</p>
                 <p>N’hésitez pas à tester le jeu par vous-mêmes ici !👇🏽</p>
-                <a href="https://elodie2812.github.io/WallBreaker/" target="_blank" class="button project">Voir le projet</a>
+                <a href="wallbreaker.html" target="_blank" class="button project">Voir le projet</a>
             </div>
         </section>
         <div class="separateur"></div>
@@ -235,13 +241,51 @@
         <div class="separateur"></div>
         <section class="container">
             <div class="blockMockup">
-                <a href="#"><img class="mockup" src="assets/img/mockup.jpg" alt="Mock Up"></a>
+                <a href="cartes-de-visite.html"><img class="mockup" src="assets/img/cartesVisite/cartesVisites2.jpg" alt="Mock Up"></a>
             </div>
             <div class="blockMockup">
                 <h2 class="large">14</h2>
+                <h2>Création de cartes de visite</h2>
+                <p>Cartes de visites au format standard européen ou aux coins arrondis au choix.</p>
+                <p>Impression Recto-Verso</p>
+                <a href="cartes-de-visite.html" class="button project">Voir le projet</a>
+            </div>
+        </section>
+        <div class="separateur"></div>
+        <section class="container">
+            <div class="blockMockup">
+                <h2 class="large">15</h2>
+                <h2>Création de Cartes d'anniversaire personnalisées</h2>
+                <p>Création de cartes d’anniversaire format carré (14cm x 14cm)</p>
+                <p>Impression Recto-Verso avec un QR Code personnalisé qui redirige vers la page internet ou le GIF de votre choix !</p>
+                <a href="cartes-anniversaire.html" class="button project">Voir le projet</a>
+            </div>
+            <div class="blockMockup">
+                <a href="cartes-anniversaire.html"><img class="mockup" src="assets/img/cartesAnniversaire/anniv2.jpg" alt="Mock Up"></a>
+            </div>
+        </section>
+        <div class="separateur"></div>
+        <section class="container">
+            <div class="blockMockup">
+                <a href="video-halloween.html"><img class="mockup" src="assets/img/vidéoHalloween/halloween.jpg" alt="Mock Up"></a>
+            </div>
+            <div class="blockMockup">
+                <h2 class="large">16</h2>
+                <h2>Réalisation d'une vidéo pour Halloween</h2>
+                <p>À l’aide des logiciels de montage Premiere Pro & After Effects.</p>
+                <a href="video-halloween.html" class="button project">Voir le projet</a>
+            </div>
+        </section>
+        <div class="separateur"></div>
+        <section class="container">
+            <div class="blockMockup">
+                <h2 class="large">17</h2>
                 <h2>Projet à Venir...</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum rerum tenetur deserunt quos dignissimos natus fugiat? Odit, eaque. Nesciunt aut repudiandae sapiente eligendi pariatur fugiat possimus itaque corrupti asperiores earum?</p>
                 <a href="#" class="button project">Voir le projet</a>
+            </div>
+            <div class="blockMockup">
+                <a href="#"><img class="mockup" src="assets/img/mockup.jpg" alt="Mock Up"></a>
             </div>
         </section>
 
