--- a/illustrations.html
+++ b/illustrations.html
@@ -26,7 +26,9 @@
 <body>
     <header>
         <h1><a href="index.html"><span class="color">É</span>lodie FERRY</a> 
-            <br> Webdesigner <span class="color">J</span>unior</h1>
+            <br> <strong>Webdesigner</strong> / Intégratrice <span class="color">W</span>eb 
+            <br> <span class="color">L</span>e <span class="color">H</span>avre 
+        </h1>
     </header>
     <!--Navbar Desktop-->
     <nav class="navbar">
@@ -40,6 +42,9 @@
             </li>
             <li class="nav-items">
                 <a href="quisuisje.html" class="nav-links">Qui suis-je ?</a>
+            </li>
+            <li class="nav-items">
+                <a href="references.html" class="nav-links">Références</a>
             </li>
             <li class="nav-items">
                 <a href="contact.html" class="nav-links">Contact</a>
@@ -58,6 +63,7 @@
                 <li><a href="index.html">Accueil</a></li>
                 <li><a href="creations.html">Mes Créations</a></li>
                 <li><a href="quisuisje.html">Qui suis-je ?</a></li>
+                <li><a href="references.html">Références</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
@@ -136,7 +142,7 @@
 
         <div class="buttonBlock">
             <a href="projet-galerie.html" class="button below"> <i class="fas fa-caret-left arrow"></i> Projet Précédent </a>
-            <a href="creations.html" class="button below"> Retour à Mes Créations <i class="fas fa-caret-right arrow"></i> </a>
+            <a href="cartes-de-visite.html" class="button below"> Projet Suivant <i class="fas fa-caret-right arrow"></i> </a>
         </div>
 
     </main>
