--- a/projet-blog.html
+++ b/projet-blog.html
@@ -26,7 +26,9 @@
 <body>
     <header>
         <h1><a href="index.html"><span class="color">É</span>lodie FERRY</a> 
-            <br> Webdesigner <span class="color">J</span>unior</h1>
+            <br> <strong>Webdesigner</strong> / Intégratrice <span class="color">W</span>eb 
+            <br> <span class="color">L</span>e <span class="color">H</span>avre 
+        </h1>
     </header>
     <!--Navbar Desktop-->
     <nav class="navbar">
@@ -40,6 +42,9 @@
             </li>
             <li class="nav-items">
                 <a href="quisuisje.html" class="nav-links">Qui suis-je ?</a>
+            </li>
+            <li class="nav-items">
+                <a href="references.html" class="nav-links">Références</a>
             </li>
             <li class="nav-items">
                 <a href="contact.html" class="nav-links">Contact</a>
@@ -58,6 +63,7 @@
                 <li><a href="index.html">Accueil</a></li>
                 <li><a href="creations.html">Mes Créations</a></li>
                 <li><a href="quisuisje.html">Qui suis-je ?</a></li>
+                <li><a href="references.html">Références</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
@@ -132,8 +138,8 @@
             <div class="blockMockup">
                 <h2 class="large">03</h2>
                 <h2>Mise en Ligne</h2>
-                <p>Mise en ligne prochainement, dans l'attente d'un hébergement.</p>
-                <a href="#" target="_blank" class="button project">Voir le résultat</a>
+                <p>Mise en ligne avec l'hébergeur OVH</p>
+                <a href="http://blog-globe-trotter.fr/" target="_blank" rel="noopener" class="button project">Voir le résultat</a>
             </div>
         </section>
 
