--- a/creations.html
+++ b/creations.html
@@ -267,7 +267,7 @@
         <div class="separateur"></div>
         <section class="container">
             <div class="blockMockup">
-                <a href="video-halloween.html"><img class="mockup" src="assets/img/vidéoHalloween/halloween.jpg" alt="Mock Up"></a>
+                <a href="video-halloween.html"><img class="mockup" src="assets/img/videoHalloween/halloween.jpg" alt="Mock Up"></a>
             </div>
             <div class="blockMockup">
                 <h2 class="large">16</h2>
