--- a/video-halloween.html
+++ b/video-halloween.html
@@ -80,7 +80,7 @@
         </section>
 
         <section class="chadou">
-            <img src="assets/img/vidéoHalloween/halloween.jpg" alt="Image vidéo">
+            <img src="assets/img/videoHalloween/halloween.jpg" alt="Image vidéo">
             <h3>Projet réalisé en solo.</h3>
         </section>
 
@@ -108,7 +108,7 @@
                 <p>À regarder avec le son !</p>
             </div>
             <div class="blockMockup">
-                    <video class="videoSize" src="assets/video/Halloween21.mp4" controls poster="assets/img/vidéoHalloween/videoHallo.jpg"></video>
+                    <video class="videoSize" src="assets/video/Halloween21.mp4" controls poster="assets/img/videoHalloween/videoHallo.jpg"></video>
             </div>
         </section>
 
